tests/read_only_object/read_only_object.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:5

Cannot assign `42` to `obj.p` because property `p` is not writable.

   6| obj.p = 42; // Should error!
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:14:13

Cannot assign `42` to `multiKeyObj.p` because property `p` is not writable.

   14| multiKeyObj.p = 42; // Should error!
                   ^


Error ---------------------------------------------------------------------------------------------------- test.js:15:13

Cannot assign `42` to `multiKeyObj.q` because property `q` is not writable.

   15| multiKeyObj.q = 42; // Should error!
                   ^


Error ---------------------------------------------------------------------------------------------------- test.js:22:12

Cannot assign `42` to `unionObj.p` because property `p` is not writable.

   22|   unionObj.p = 42; // Should error!
                  ^


Error ---------------------------------------------------------------------------------------------------- test.js:24:13

Cannot get `unionObj.q` because property `q` is missing in object type [1].

   test.js:24:13
   24|   (unionObj.q: number); // Should error!
                   ^

References:
   test.js:20:33
   20| declare var unionObj: $ReadOnly<UnionObj>;
                                       ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:26:12

Cannot assign `42` to `unionObj.p` because property `p` is not writable.

   26|   unionObj.p = 42; // Should error!
                  ^


Error ---------------------------------------------------------------------------------------------------- test.js:27:12

Cannot assign `42` to `unionObj.q` because property `q` is not writable.

   27|   unionObj.q = 42; // Should error!
                  ^


Error ---------------------------------------------------------------------------------------------------- test.js:36:18

Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

   36|   spreadUnionObj.p = 42; // Should error!
                        ^


Error ---------------------------------------------------------------------------------------------------- test.js:37:18

Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

   37|   spreadUnionObj.z = 42; // Should error!
                        ^


Error ---------------------------------------------------------------------------------------------------- test.js:40:19

Cannot get `spreadUnionObj.q` because property `q` is missing in object type [1].

   test.js:40:19
   40|   (spreadUnionObj.q: number); // Should error!
                         ^

References:
   test.js:34:39
   34| declare var spreadUnionObj: $ReadOnly<SpreadUnionObj>
                                             ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:42:18

Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

   42|   spreadUnionObj.p = 42; // Should error!
                        ^


Error ---------------------------------------------------------------------------------------------------- test.js:43:18

Cannot assign `42` to `spreadUnionObj.q` because property `q` is not writable.

   43|   spreadUnionObj.q = 42; // Should error!
                        ^


Error ---------------------------------------------------------------------------------------------------- test.js:44:18

Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

   44|   spreadUnionObj.z = 42; // Should error!
                        ^


Error ---------------------------------------------------------------------------------------------------- test.js:52:17

Cannot assign `42` to `intersectionObj.p` because property `p` is not writable.

   52| intersectionObj.p = 42; // Should error!
                       ^


Error ---------------------------------------------------------------------------------------------------- test.js:53:17

Cannot assign `42` to `intersectionObj.q` because property `q` is not writable.

   53| intersectionObj.q = 42; // Should error!
                       ^


Error ---------------------------------------------------------------------------------------------------- test.js:59:15

Cannot assign `42` to `indexerKeyObj.p` because property `p` is not writable.

   59| indexerKeyObj.p = 42; // Should error!
                     ^


Error ---------------------------------------------------------------------------------------------------- test.js:60:15

Cannot assign `true` to `indexerKeyObj.x` because property `x` is not writable.

   60| indexerKeyObj.x = true; // Should error!
                     ^


Error ---------------------------------------------------------------------------------------------------- test.js:66:10

Cannot assign `42` to `exactObj.p` because property `p` is not writable.

   66| exactObj.p = 42; // Should error!
                ^


Error ---------------------------------------------------------------------------------------------------- test.js:71:11

Cannot assign `42` to `spreadObj.p` because property `p` is not writable.

   71| spreadObj.p = 42; // Should error!
                 ^


Error ---------------------------------------------------------------------------------------------------- test.js:76:16

Cannot assign `42` to `spreadExactObj.p` because property `p` is not writable.

   76| spreadExactObj.p = 42; // Should error!
                      ^


Error ---------------------------------------------------------------------------------------------------- test.js:81:15

Cannot assign `42` to `objWithMethod.p` because property `p` is not writable.

   81| objWithMethod.p = 42; // Should error!
                     ^


Error ---------------------------------------------------------------------------------------------------- test.js:82:15

Cannot assign function to `objWithMethod.fn` because property `fn` is not writable.

   82| objWithMethod.fn = () => true; // Should error!
                     ^^


Error ---------------------------------------------------------------------------------------------------- test.js:90:10

Cannot assign `42` to `instance.p` because property `p` is not writable.

   90| instance.p = 42; // Should error!
                ^


Error ---------------------------------------------------------------------------------------------------- test.js:95:14

Cannot assign `42` to `writeOnlyObj.p` because property `p` is not writable.

   95| writeOnlyObj.p = 42; // Should error!
                    ^


Error ---------------------------------------------------------------------------------------------------- test.js:99:30

Cannot instantiate `$ReadOnly` because number [1] is not an object.

   99| type readOnlyNum = $ReadOnly<number>;
                                    ^^^^^^ [1]



Found 25 errors
